scripts/istioyaml/istio-system/prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prometheus.istio.oauthd.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  gateways:
    - prometheus-gateway
  hosts:
    - prometheus.istio.oauthd.com
  http:
    - match:
        - gateways:
            - mesh
            - prometheus-gateway
          port: 80
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
            subset: v1
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus-dr
  namespace: istio-system
spec:
  host: prometheus.istio-system.svc.cluster.local
  subsets:
    - labels:
        app: prometheus
      name: v1
