scripts/istioyaml/istio-system/trace.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trace-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - trace.istio.oauthd.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trace-vs
  namespace: istio-system
spec:
  gateways:
    - trace-gateway
  hosts:
    - trace.istio.oauthd.com
  http:
    - match:
        - gateways:
            - mesh
            - trace-gateway
          port: 80
      route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
            subset: v1
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: trace-dr
  namespace: istio-system
spec:
  host: tracing.istio-system.svc.cluster.local
  subsets:
    - labels:
        app: jaeger
      name: v1
