scripts/istioyaml/istio-system/zipkin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: zipkin-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - zipkin.istio.oauthd.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin-vs
  namespace: istio-system
spec:
  gateways:
    - zipkin-gateway
  hosts:
    - zipkin.istio.oauthd.com
  http:
    - match:
        - gateways:
            - mesh
            - zipkin-gateway
          port: 80
      route:
        - destination:
            host: istio-ingressgateway.istio-system.svc.cluster.local
            port:
              number: 15032
            subset: v1
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zipkin-dr
  namespace: istio-system
spec:
  host: istio-ingressgateway.istio-system.svc.cluster.local
  subsets:
    - labels:
        app: istio-ingressgateway
      name: v1
